--- a/_recipes/20200808_soup.md
+++ b/_recipes/20200808_soup.md
@@ -1,8 +1,8 @@
 ---
 
 layout: recipe
-title:  "Pamesansuppe"
-image: 20200516-soup.jpg
+title:  "Parmesansuppe"
+image: 202000808-soup.jpg
 tags: soup, cheese, italian
 
 ingredients:
