--- a/_recipes/20201107-salat.md
+++ b/_recipes/20201107-salat.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title:  "Thailändischer Papayasalat"
-image: 20201107-salat.jpeg
+image: 20201107-salad.jpeg
 tags: salat, papaya, scharf
 
 ingredients:
