--- a/_recipes/20201107-apero.md
+++ b/_recipes/20201107-apero.md
@@ -20,10 +20,10 @@ ingredients:
 
 
 directions:
-- Pro Teigpack. Strudelteig auseinanderfalten und die 4 einzelnen Blätter trennen, jedes mit wenig Olivenöl bestreichen und alle 4 aufeinanderlegen, in 12 Rechtecke schneiden. Die Rechtecke auf ein Backblech oder in eine Muffinform geben um die Nestliform zu erhalten.
-- Backen ca. 8 Min. in der unteren Hälfte des auf 220 °C vorgeheizten Ofens. Herausnehmen, etwas abkühlen, aus dem Blech nehmen, auskühlen. 
-- Mango-Füllung. Rahm und 1/2 TL Salz Salz mischen und in die Nestli verteilen. Mango, Peperoncinis Limettenschale, Limettensaft und 2 EL Olivenöl in schüssel vermischen und auf die Creme verteilen.
-- Crevetten braten. Wenig Öl in einer beschichteten Bratpfanne heiss werden lassen. Crevetten portionenweise je ca. 2 Min. braten, salzen, auf die Füllung legen. Koriander darüberstreuen.
+- "Pro Teigpack: Strudelteig auseinanderfalten und die 4 einzelnen Blätter trennen, jedes mit wenig Olivenöl bestreichen und alle 4 aufeinanderlegen, in 12 Rechtecke schneiden. Die Rechtecke auf ein Backblech oder in eine Muffinform geben um die Nestliform zu erhalten."
+- "Backen: ca. 8 Min. in der unteren Hälfte des auf 220 °C vorgeheizten Ofens. Herausnehmen, etwas abkühlen, aus dem Blech nehmen, auskühlen."
+- "Mango-Füllung: Rahm und 1/2 TL Salz Salz mischen und in die Nestli verteilen. Mango, Peperoncinis Limettenschale, Limettensaft und 2 EL Olivenöl in schüssel vermischen und auf die Creme verteilen."
+- "Crevetten braten: Wenig Öl in einer beschichteten Bratpfanne heiss werden lassen. Crevetten portionenweise je ca. 2 Min. braten, salzen, auf die Füllung legen. Koriander darüberstreuen."
 ---
 
 Rezept für 24 Nestli, inspiriert von [hier](https://fooby.ch/de/rezepte/12088/apero-strudelnestli)
