--- a/_recipes/20201107-salat.md
+++ b/_recipes/20201107-salat.md
@@ -21,7 +21,7 @@ ingredients:
 
 
 directions:
-- Vorbereitung: Zitronengras fein schneiden. Chili mit Kernen zerkleinern. Ein Stück Ingwer schälen. Spargelbohnen in mundgerechte Stücke schneiden. Papaya und Karotten schälen und in feine Streifen schneiden. 
+- "Vorbereitung: Zitronengras fein schneiden. Chili mit Kernen zerkleinern. Ein Stück Ingwer schälen. Spargelbohnen in mundgerechte Stücke schneiden. Papaya und Karotten schälen und in feine Streifen schneiden."
 - Zitronengras, Chili und Ingwer im Mörser gut zerstossen. Die Dauer des zerstossen im Mörser ist bei der ganzen Zubereitung entscheidend für den Geschmack und die Schärfe am Schluss. Zucker, Bouillon und Limttensaft dazugeben und weiter mit dem Mörser zerstossen. 
 - Cherry Tomaten halbiert mit den Spargelbohnen dazugeben und daruntermischen. Mit dem Mörser weiter die Bohnen und Tomaten stampfen um ein kräftiges Aroma zu erhalten. 
 - Korianderblätter laufend dazugeben. Papayastreifen, Karottenstreifen und Erdnüsse laufend dazugeben und alles gut vermischen. Den Salat erst kurz vor Servieren zubereiten, sonst verliert die Papaya ihre feste Beschaffenheit.
