--- a/_recipes/20190609_asian-egg.md
+++ b/_recipes/20190609_asian-egg.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Ei im Glas"
 image: 20190609_apero.jpeg
-tags: panna cotta, dessert, rhubarb, black ale
+tags: zwischengang
 
 ingredients:
 - 200 g Thai-Spargel, grün, ersatzweise schlanker grüner Spargel
