Updated images and second event

--- a/_recipes/20181027-apero.md
+++ b/_recipes/20181027-apero.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title:  "Samosas"
-image: 2018xxxx-apero.jpg
+image: 20181027-apero.jpeg
 tags: apero, samosa, vegetarisch
 
 ingredients:
