--- a/_recipes/20181027-salad.md
+++ b/_recipes/20181027-salad.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title:  "Herbstsalat mit Eierschwämmli und Trauben"
-image: 2018xxxx-herbstsalat.jpg
+image: 20181027-salad.jpeg
 tags: salat
 
 ingredients:
