--- a/_recipes/20181027-apero.md
+++ b/_recipes/20181027-apero.md
@@ -3,7 +3,8 @@
 layout: recipe
 title:  "Samosas"
 image: 20181027-apero.jpeg
-tags: apero, samosa, vegetarisch
+tags: apero, samosa, vegetarisch, '#2'
+date: 20181027
 
 ingredients:
 - 300 g Mehl
