--- a/_recipes/20201107-apero.md
+++ b/_recipes/20201107-apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Strudelnestli"
 image: 20201107-apero.jpeg
-tags: apero, shrimps
+tags: apero, shrimps, '#9'
 
 ingredients:
 - 2 Pack Strudelteig à 12g
