--- a/_recipes/20201107-salat.md
+++ b/_recipes/20201107-salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Thailändischer Papayasalat"
 image: 20201107-salad.jpeg
-tags: salat, papaya, scharf
+tags: salat, papaya, scharf, '#9'
 
 ingredients:
 - 1 grosse Papaya (aus dem Asialaden)
@@ -27,6 +27,6 @@ directions:
 - Korianderblätter laufend dazugeben. Papayastreifen, Karottenstreifen und Erdnüsse laufend dazugeben und alles gut vermischen. Den Salat erst kurz vor Servieren zubereiten, sonst verliert die Papaya ihre feste Beschaffenheit.
 ---
 
-Rezept für 4-6 Personen, inspiriert von Monica Andres
+Rezept für 4-6 Personen, inspiriert von Monica
 
 Bierempfehlung: Least Resistance von [Pressure Drop Brewing](https://pressuredropbrewing.co.uk/)
