Added sort order

--- a/_recipes/20181027-apero.md
+++ b/_recipes/20181027-apero.md
@@ -4,7 +4,8 @@ layout: recipe
 title:  "Samosas"
 image: 20181027-apero.jpeg
 tags: apero, samosa, vegetarisch, '#2'
-date: 20181027
+event: 2
+dish: 1
 
 ingredients:
 - 300 g Mehl
