--- a/_recipes/20181027-salad.md
+++ b/_recipes/20181027-salad.md
@@ -4,6 +4,8 @@ layout: recipe
 title:  "Herbstsalat mit Eierschwämmli und Trauben"
 image: 20181027-salad.jpeg
 tags: salat, '#2'
+event: 2
+dish: 2
 
 ingredients:
 - 1 Schalotte
