--- a/_recipes/20190609_asian-egg.md
+++ b/_recipes/20190609_asian-egg.md
@@ -4,6 +4,8 @@ layout: recipe
 title:  "Ei im Glas"
 image: 20190609_apero.jpeg
 tags: zwischengang, '#5'
+event: 5
+dish: 4
 
 ingredients:
 - 200 g Thai-Spargel, grün, ersatzweise schlanker grüner Spargel
