--- a/_recipes/20201107-apero.md
+++ b/_recipes/20201107-apero.md
@@ -4,6 +4,8 @@ layout: recipe
 title:  "Strudelnestli"
 image: 20201107-apero.jpeg
 tags: apero, shrimps, '#9'
+event: 9
+dish: 1
 
 ingredients:
 - 2 Pack Strudelteig à 12g
