--- a/_recipes/20201107-salat.md
+++ b/_recipes/20201107-salat.md
@@ -4,6 +4,8 @@ layout: recipe
 title:  "Thailändischer Papayasalat"
 image: 20201107-salad.jpeg
 tags: salat, papaya, scharf, '#9'
+event: 9
+dish: 2
 
 ingredients:
 - 1 grosse Papaya (aus dem Asialaden)
