--- a/_recipes/20200627-dessert.md
+++ b/_recipes/20200627-dessert.md
@@ -4,6 +4,8 @@ layout: recipe
 title:  "Pfirsicheisbecher"
 image: 20200627-dessert.jpg
 tags: dessert, pfirsich, karamell, grill, '#7'
+event: 7
+dish: 6
 
 ingredients:
 - 200g Zucker
