--- a/_recipes/20200627-Salat.md
+++ b/_recipes/20200627-Salat.md
@@ -19,7 +19,7 @@ ingredients:
 
  
 directions:
-- Salat:
+- Salat
 - Peperoni in ca. 2cm breit Streifen schneiden und in Schüssel geben.
 - Nektarinen in ca. 2 cm breite Schnitze schneiden und in Schüssel geben.
 - Olivenöl beigeben.
@@ -27,11 +27,12 @@ directions:
 - Alles auf einem Backpapier belegten Blech verteilen.
 - 10 Minunten in der oberen Hälfte des auf 250°C vorgeheizten Ofens backen.
 - Herausnehmen, auf dem Blech abkühlen lassen, 8 Nektarinenschnitze für die Sacue beiseite stellen.
-- Nekatirinensauce:
+- Nekatirinensauce
 - Aceto balsamico mit beiseite gestellten Nektarinen  pürieren.
 - Sauce salzen und über Salat giessen.
 - Pfefferkörner zerdrücken udn mit Zitronenverveine-Blättchen dem Salat beigeben und mischen.
-- Tipp: Lässt sich vorbereiten, 1/2 Tag im Voraus Peperoni und Nektarinen backen, Nektarinensauce zubereiten, beides seperat zugedeckt kühl stellen. Kurz vor dem Servieren Salat fertig Zubereiten.
+- Tipp
+- Lässt sich vorbereiten, 1/2 Tag im Voraus Peperoni und Nektarinen backen, Nektarinensauce zubereiten, beides seperat zugedeckt kühl stellen. Kurz vor dem Servieren Salat fertig Zubereiten.
 
 
 ---
