--- a/_recipes/20181027_dessert.md
+++ b/_recipes/20181027_dessert.md
@@ -1,14 +1,14 @@
 ---
 
 layout: recipe
-title:  "Guinesstraum mit Vanilleglace"
+title:  "Guinnesstraum mit Vanilleglace"
 image: 20181027-dessert.jpeg
-tags: dessert, guiness, brownies, glace, mousse, '#2'
+tags: dessert, Guinness, brownies, glace, mousse, '#2'
 event: 2
 dish: 6
 
 ingredients:
-- 50ml Guiness Draught
+- 50ml Guinness Draught
 - 90g dunkle Schokolade
 - 25g Milchschokolade
 - 90g Butter
@@ -24,7 +24,7 @@ ingredients:
 - 260g dunkle Schokolade
 - 75g Butter
 - 75g Puderzucker
-- 75ml Guiness Original
+- 75ml Guinness Original
 
 - 400g gezuckerte Kondensmilch
 - 500g Vollrahm
@@ -34,9 +34,9 @@ ingredients:
 directions:
 - Für die Brownies den Backofen auf 160° vorheizen.
 - Auf einem mit Backpapier belegten Backblech die weissen Schokoladenpellets gleichmässig verstreuen.
-- Ein Wasserbad vorbereiten, danach die Butter und beide Schokoladen mit dem Guiness in eine Schüssel geben und über dem Wasserbad schmelzen. Sobald die Masse cremig ist vom Wasserbad nehmen und etwas auskühlen lassen.
+- Ein Wasserbad vorbereiten, danach die Butter und beide Schokoladen mit dem Guinness in eine Schüssel geben und über dem Wasserbad schmelzen. Sobald die Masse cremig ist vom Wasserbad nehmen und etwas auskühlen lassen.
 - Eier, Zucker und Vanilleessenz cremig rühren, anschliessend die Masse in die geschmolzene Schockolade einrühren. Mehl und Kokosnuss-Pulver in 3 Schritten dazugeben und unterheben. Die Masse auf das Backblech geben und gleichmässig verteilen. Bei 106° ca. 20-22 Minuten backen.
-- Für das Mousse die Schokolade mit der Butter in einer Schüssel über dem Wasserbad schmelzen, danach das Guiness beifügen und gut verrühren. Sobald alles cremig ist, die Schlüssel vom Wasserbad nehmen und etwas abkühlen lassen.
+- Für das Mousse die Schokolade mit der Butter in einer Schüssel über dem Wasserbad schmelzen, danach das Guinness beifügen und gut verrühren. Sobald alles cremig ist, die Schlüssel vom Wasserbad nehmen und etwas abkühlen lassen.
 - Eigelb und Puderzucker in einer Schüssel schaumig schlagen. Die geschmolzene Schokolade dazugeben und gut verrühren (nicht schlagen). Das geschlagene Eiweiss unterheben bis eine gleichmässige Masse entsteht.
 - Mousse in Serviergläser geben und bis zum Gebrauch kühl stellen.
 - Das Glacenrezept ist einfach und geeignet, wenn man keine Glacemaschine hat. Gefriehrtaugliche Form mit ca. 1.5l Fassungsvermögen zum Vorkühlen in den Tiefkühler legen.
