--- a/_recipes/20201205-salat.md
+++ b/_recipes/20201205-salat.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title: "Scharfer Nüsslisalat"
-image: 
+image: 20201205-salad.jpeg
 tags: salat, nüssler, '#10'
 event: 10
 dish: 2
@@ -29,7 +29,7 @@ directions:
 
 components:
 - Cayenne-Honig Dressing
-- 
+- Mayonnaise by Hirse
 ---
 
 Rezepte für 6 Personen, inspiriert von diversen Quellen, zusammengestellt und experimentiert von Hirse
