--- a/_recipes/20201205-salat.md
+++ b/_recipes/20201205-salat.md
@@ -21,7 +21,7 @@ ingredients:
 
 directions:
 - "Cayenne-Honig Dressing zubereiten (kann gut im Voraus vorbereitet und im Kühlschrank gelagert werden)."
-- "Ofen auf 180C Umluft vorheizen. Brot in Würfel von ca. 1x1 cm schneiden. Knoblauch in feine Würfel schneiden. In einer Bratpfanne das Sonnenblumenöl aufheizen und den Knoblauch darin goldbraun frittieren. Den Knoblauch rausfischen und nun die Brotwürfel in das Öl geben und darin schwenken. Hitze sofort reduzieren (anbrenngefahr). Sobald das Öl grösstenteils aufgesogen wurde die Croutons in den Ofen geben und langsam knusprig werden lassen (ca. XXX min). Anschliessend mit Salz und Pfeffer würzen. Beides kann gut nach dem Abkühlen in einem Luftdichten behälter aufbewahrt werden."
+- "Ofen auf 180C Umluft vorheizen. Brot in Würfel von ca. 1x1 cm schneiden. Knoblauch in feine Würfel schneiden. In einer Bratpfanne das Sonnenblumenöl aufheizen und den Knoblauch darin goldbraun frittieren. Den Knoblauch rausfischen und nun die Brotwürfel in das Öl geben und darin schwenken. Hitze sofort reduzieren (anbrenngefahr). Sobald das Öl grösstenteils aufgesogen wurde die Croutons in den Ofen geben und langsam knusprig backen (ca. 7-8 min). Anschliessend mit Salz und Pfeffer würzen und auf einem Saugfähigen Papier abkühlen lassen. Beides kann gut nach dem Abkühlen in einem Luftdichten behälter aufbewahrt werden."
 - In einer Schüssel den Rohzucker, Cayennepfeffer und Kreuzkümmel vermischen und auf einem Backbleck die Speckstreifen damit grosszügig bedecken. Für zirka 6 Minuten in den Ofen geben bis der Belag caramelisiert wurde und der Speck eine schöne Farbe angenommen hat. 
 - Wasser aufkochen und die Eier für 7 Minuten kochen. Nach der Kochzeit die Pfanne vom Herd nehmen und die Eier in kaltem Wasser für 2 Minuten ruhen lassen. So behalten sie im innern noch eine leichte Wärme und das Eigelb ist zur Hälfte noch flüssig.
 - Den Nüsslisalat waschen und schleudern. Auf einem Teller anrichten und mit der Sauce beträufeln. Den Speck in Streifen schneiden und mit den Croutons und dem Knoblauch darüber geben. Das Ei halbieren und dazu geben (ev. mit Paprika oder Cayennepfeffer dekorieren).
@@ -34,4 +34,4 @@ components:
 
 Rezepte für 6 Personen, inspiriert von diversen Quellen, zusammengestellt und experimentiert von Hirse
 
-Bierempfehlung: 
+Bierempfehlung: Dolly von [Braukollektiv](https://www.braukollektiv.com/dolly)
