--- a/_recipes/20201205-salat.md
+++ b/_recipes/20201205-salat.md
@@ -32,6 +32,6 @@ components:
 - Mayonnaise by Hirse
 ---
 
-Rezepte für 6 Personen, inspiriert von diversen Quellen, zusammengestellt und experimentiert von Hirse
+Rezept für 6 Personen von Hirse
 
 Bierempfehlung: Dolly von [Braukollektiv](https://www.braukollektiv.com/dolly)
