--- a/_recipes/20190112-Dessert1.md
+++ b/_recipes/20190112-Dessert1.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title:  "Käseplatte"
-image: 20190112-dessert.jpeg
+image: 20190112_dessert.jpeg
 tags: dessert, käse, '#3'
 event: 3
 dish: 6
