--- a/_recipes/20190112-Dessert2.md
+++ b/_recipes/20190112-Dessert2.md
@@ -8,7 +8,7 @@ event: 3
 dish: 6
 
 directions:
-- Alle Komponenten Zubereiten, auf Teller anrichten udn servieren.
+- Alle Komponenten Zubereiten, auf Teller anrichten und servieren.
 
 components:
 - Ricotta & Mascarpone Kuchen
