added new recipes, added names

--- a/_recipes/20180414_apero.md
+++ b/_recipes/20180414_apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "scharf-süsse Ananashäppchen"
 image: 20180414_apero.jpeg
-tags: apero, ananas, serrano, chili, '#1'
+tags: apero, rohrbach, '#1'
 event: 1
 dish: 1
 
