--- a/_recipes/20180414_suppe.md
+++ b/_recipes/20180414_suppe.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Cappuccino vom Steinpilz"
 image: 20180414_suppe.jpeg
-tags: Suppe, Steinpilz, Herbst, '#1'
+tags: Suppe, andres, Herbst, '#1'
 event: 1
 dish: 2
 
