--- a/_recipes/20181027-apero.md
+++ b/_recipes/20181027-apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Samosas"
 image: 20181027-apero.jpeg
-tags: apero, samosa, vegetarisch, '#2'
+tags: apero, samosa, vegetarisch, hirsiger, '#2'
 event: 2
 dish: 1
 
