--- a/_recipes/20181027-main.md
+++ b/_recipes/20181027-main.md
@@ -3,7 +3,7 @@
 layout: recipe
 title: "Suure Mocke"
 image: 20181027-main.jpeg
-tags: Hauptgang, Fleisch, schmoren, '#2'
+tags: Hauptgang, Fleisch, schmoren, andres, '#2'
 event: 2
 dish: 4
 
