--- a/_recipes/20181027_dessert.md
+++ b/_recipes/20181027_dessert.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Guinnesstraum mit Vanilleglace"
 image: 20181027-dessert.jpeg
-tags: dessert, Guinness, brownies, glace, mousse, '#2'
+tags: dessert, Guinness, brownies, glace, mousse, rohrbach, '#2'
 event: 2
 dish: 6
 
