--- a/_recipes/20190112-Dessert2.md
+++ b/_recipes/20190112-Dessert2.md
@@ -3,7 +3,7 @@
 layout: recipe
 title: "Ricotta & Mascarpone Kuchen mit Ragusa Glace"
 image: 20190112_dessert2.jpeg
-tags: dessert, kuchen, glace, '#3'
+tags: dessert, kuchen, glace, jost, '#3'
 event: 3
 dish: 6
 
