--- a/_recipes/20190112-salat.md
+++ b/_recipes/20190112-salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Randen-Rüebli-Terrine"
 image: 20190112_salat.jpeg
-tags: salat, Randen, Rüebli, Brot, '#3'
+tags: salat, Randen, Rüebli, Brot, andres, '#3'
 event: 3
 dish: 2
 
