--- a/_recipes/20190511-Salat.md
+++ b/_recipes/20190511-Salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Salattorte"
 image: 20190511_salat.jpeg
-tags: salat, torte, '#4'
+tags: salat, torte, jost, '#4'
 event: 4
 dish: 2
 
