--- a/_recipes/20190609_dessert1.md
+++ b/_recipes/20190609_dessert1.md
@@ -3,7 +3,7 @@
 layout: recipe
 title: "Karamellisierte Ananas"
 image: 20190609_dessert1.jpeg
-tags: dessert, ananas, grill, karamell
+tags: dessert, ananas, grill, karamell, andres
 event: 5
 dish: 6
 
