--- a/_recipes/20190609_dessert2.md
+++ b/_recipes/20190609_dessert2.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Erdbeeren mit Ziegenkäse"
 image: 20190609_dessert2.jpeg
-tags: dessert, käse, erdbeeren
+tags: dessert, käse, erdbeeren, andres
 event: 5
 dish: 7
 
