--- a/_recipes/20200516-Apero.md
+++ b/_recipes/20200516-Apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Frühlingsrollen"
 image: 20200516-springrolls.jpg
-tags: apero, frühlingsrollen '#6'
+tags: apero, frühlingsrollen, jost, '#6'
 event: 6
 dish: 1
 
