--- a/_recipes/20200516-dessert.md
+++ b/_recipes/20200516-dessert.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Chocolate"
 image: 20200516-dessert.jpg
-tags: dessert, '#6'
+tags: dessert, käser, '#6'
 event: 6
 dish: 6
 
