--- a/_recipes/20200516-main.md
+++ b/_recipes/20200516-main.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Rindsfilet in Kaffeesalzkruste"
 image: 20200516-main.jpg
-tags: hauptgang, fleisch, garen, kaffee, salz, '#6'
+tags: hauptgang, fleisch, garen, kaffee, salz, andres, '#6'
 event: 6
 dish: 5
 
