--- a/_recipes/20200627-Salat.md
+++ b/_recipes/20200627-Salat.md
@@ -27,7 +27,7 @@ directions:
 - Alles auf einem Backpapier belegten Blech verteilen.
 - 10 Minunten in der oberen Hälfte des auf 250°C vorgeheizten Ofens backen.
 - Herausnehmen, auf dem Blech abkühlen lassen, 8 Nektarinenschnitze für die Sacue beiseite stellen.
-- 'Nekatirinensauce:'
+- 'Nektarinensauce:'
 - Aceto balsamico mit beiseite gestellten Nektarinen  pürieren.
 - Sauce salzen und über Salat giessen.
 - Pfefferkörner zerdrücken udn mit Zitronenverveine-Blättchen dem Salat beigeben und mischen.
