--- a/_recipes/20200627-dessert.md
+++ b/_recipes/20200627-dessert.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Pfirsicheisbecher"
 image: 20200627-dessert.jpg
-tags: dessert, pfirsich, karamell, grill, '#7'
+tags: dessert, pfirsich, karamell, grill, andres, '#7'
 event: 7
 dish: 6
 
