--- a/_recipes/20200808-apero.md
+++ b/_recipes/20200808-apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "viererlei Melonen"
 image: 20200808-apero.jpg
-tags: apero, melonen, '#8'
+tags: apero, melonen, andres, '#8'
 event: 8
 dish: 1
 
