--- a/_recipes/20200808-salad.md
+++ b/_recipes/20200808-salad.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Sommersalat - Avocado mit Rauchlachs und Rucola"
 image: 20200808-salad.jpg
-tags: salat, '#8'
+tags: salat, käser, '#8'
 event: 8
 dish: 2
 
