--- a/_recipes/20201107-apero.md
+++ b/_recipes/20201107-apero.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Strudelnestli"
 image: 20201107-apero.jpeg
-tags: apero, shrimps, '#9'
+tags: apero, shrimps, hirsiger, '#9'
 event: 9
 dish: 1
 
