--- a/_recipes/20201205-suppe.md
+++ b/_recipes/20201205-suppe.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Bündner Gerstensuppe"
 image: 20201205-soup.jpeg
-tags: Suppe, Bacon, Bündner, Baconspecial, '#10'
+tags: Suppe, Bacon, Bündner, Baconspecial, andres, '#10'
 event: 10
 dish: 3
 
