--- a/_recipes/20181027-salad.md
+++ b/_recipes/20181027-salad.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Herbstsalat mit Eierschwämmli und Trauben"
 image: 20181027-salad.jpeg
-tags: salat, '#2'
+tags: salat, hirsiger, '#2'
 event: 2
 dish: 2
 
