--- a/_recipes/20201107-salat.md
+++ b/_recipes/20201107-salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Thailändischer Papayasalat"
 image: 20201107-salad.jpeg
-tags: salat, papaya, scharf, '#9'
+tags: salat, papaya, scharf, andres, '#9'
 event: 9
 dish: 2
 
