--- a/_recipes/20201205-salat.md
+++ b/_recipes/20201205-salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title: "Scharfer Nüsslisalat"
 image: 20201205-salad.jpeg
-tags: salat, nüssler, '#10', Baconspecial
+tags: salat, nüssler, Baconspecial, hirsiger, '#10'
 event: 10
 dish: 2
 
