--- a/_recipes/20200627-Salat.md
+++ b/_recipes/20200627-Salat.md
@@ -3,7 +3,7 @@
 layout: recipe
 title:  "Peperoni-Nektarinen-Salat"
 image: 20200627-salad.jpg
-tags: salad, '#7'
+tags: salad, jost, '#7'
 event: 7
 dish: 2
 
