--- a/_recipes/20210306-suppe.md
+++ b/_recipes/20210306-suppe.md
@@ -9,7 +9,8 @@ dish: 3
 
 ingredients:
 - 300 g Rindsvoressen 
-- 3 l Fleischbouillon
+- 2 Knochen mit Mark vom Rind
+- 2 l Fleischbouillon
 - 1 1/2 Zwiebel
 - 3 Lorbeerblätter 
 - 300 g Weisskabis
@@ -20,18 +21,18 @@ ingredients:
 - 1 1/2 EL Tomatenpüree
 - 1 1/2 EL Zucker 
 - 1 1/2 EL Essig 
--  Salz, Pfeffer 
+- Salz, Pfeffer 
 - 270 g Crème fraîche 
 - 1 1/2 EL Peterli, gehackt 
 
 directions:
-- "Fleisch mit Bouillon knapp bedecken und zusammen mit der ganzen Zwiebel und dem Lorbeer für ca. 2 Std. köcheln lassen. Zwiebel und Lorbeer entfernen. Fleisch klein schneiden und beiseite stellen."
+- "Fleisch würfeln mit Knochen in Pfanne geben, mit Bouillon knapp bedecken und zusammen mit der ganzen Zwiebel und dem Lorbeer für ca. 2 Std. köcheln lassen. Zwiebel, Knochen und Lorbeer entfernen. Fleisch beiseite stellen."
 - "Kabis und Kartoffeln klein schneiden und in der übrigen Bouillon knapp weich kochen. Randen und Rüebli in kleine Stücke schneiden. In Butter dünsten, Tomatenpüree dazugeben und zusammen mit dem Fleisch zum Kabis und den Kartoffeln geben. Nochmals kurz aufkochen und mit Zucker, Essig, Salz und Pfeffer abschmecken."
 - "In Suppenteller anrichten. Mit Crème fraîche und Peterli garnieren."
 
 ---
 
-Rezept für 6 Personen inspiriert von [hier](https://www.volg.ch/dorfplatz/rezepte/artikel/borschtsch/)
+Rezept für 6 Personen inspiriert von [hier](https://www.volg.ch/dorfplatz/rezepte/artikel/borschtsch/). Als Beilage kann Brot serviert werden (z.B. https://schweizerbrot.ch/rezept/burebrot/)
 
 Bierempfehlung:  McGargles Frank's Lager von [Rye River Brewing](https://www.ryeriverbrewingco.com/) und einen Schluck Russian Standard Vodka
 
