--- a/_recipes/20210306-Dessert.md
+++ b/_recipes/20210306-Dessert.md
@@ -2,7 +2,7 @@
 
 layout: recipe
 title:  "Tiramisu"
-image: 20210306_dessert.jpeg
+image: 20210306-dessert.jpg
 tags: dessert, tiramisu, jost, '#11'
 event: 11
 dish: 6
@@ -30,5 +30,5 @@ directions:
 
 Rezept für 4 Personen.
 
-Bierempfehlung: [St. Peter's Brewery Co. Ltd](https://www.stpetersbrewery.co.uk/), [CREAM STOUT] (https://www.stpetersbrewery.co.uk/keg-beer#&gid=1113563282&pid=5)
+Bierempfehlung: [St. Peter's Brewery Co. Ltd](https://www.stpetersbrewery.co.uk/), [CREAM STOUT](https://www.stpetersbrewery.co.uk/keg-beer#&gid=1113563282&pid=5)
 Schnapsempfehlung: [Brennerei Hürst GmbH](https://www.brennerei-huerst.ch/), [Tresterbrand](https://www.brennerei-huerst.ch/produkte/)
